js/src/tests/test262/built-ins/Error/name.js
assert
.
sameValue
(
Error
.
prototype
.
name
'
Error
'
)
;
reportCompare
(
0
0
)
;
